--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const projects = (await getCollection('work'))
 
 				<Hero
 					title="Hello, my name is Nanang Riyadi"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					tagline="I am a Front End Developer who is currently based in Ponorogo, Jawa Timur."
 					align="start"
 				>
 					<div class="roles">
