--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const projects = (await getCollection('work'))
 					alt="Nanang Riyadi smiling in a red plaid shirt and tortoise shell glasses"
 					width="480"
 					height="620"
-					src="/assets/penguin.jpg"
+					src="/assets/profil.jpg"
 				/>
 
 				<Hero
